--- a/resources/styles.css
+++ b/resources/styles.css
@@ -59,6 +59,7 @@ h1 {
 
 #wel-container {
     display: block;
+    width: 100%;
     text-align: center;
     font-family: 'Cormorant Garamond';
     
@@ -84,13 +85,7 @@ img {
     height: 300px;
 }
 
-#img-one {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-#img-two {
+.image {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -119,3 +114,10 @@ footer {
     line-height: 25px;
     font-family: 'Cormorant Garamond';
 }
+
+/* SCREEN SIZE */
+@media only screen and (min-width: 320px) and (max-width: 480px)  {
+    img {
+      width: 80%;
+    }
+  }
