--- a/resources/styles.css
+++ b/resources/styles.css
@@ -12,7 +12,7 @@ body {
 /* HEADER */
 
 header {
-    background-image: url("resources/images/banner.jpg");
+    background-image: url("/resources/images/banner.jpg");
     width: auto;
     height: 200px;
     background-position: left;
@@ -53,6 +53,12 @@ h1 {
 
 .nav a {
     color: #e89d7d;
+}
+
+@media only screen and (min-width: 320px) {
+    .nav-links {
+        font-size: 50px;
+    }
 }
 
 /* BODY */
@@ -114,10 +120,3 @@ footer {
     line-height: 25px;
     font-family: 'Cormorant Garamond';
 }
-
-/* SCREEN SIZE */
-@media only screen and (min-width: 320px) and (max-width: 480px)  {
-    img {
-      width: 80%;
-    }
-  }
