--- a/resources/styles.css
+++ b/resources/styles.css
@@ -55,7 +55,7 @@ h1 {
     color: #e89d7d;
 }
 
-@media only screen and (min-width: 320px) {
+@media only screen and (min-width: 320px) and (max-width: 420px) {
     .nav-links {
         font-size: 50px;
     }
